--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^8.0.4"
+    "mongoose": "^8.0.4",
+    "nanoid": "^5.0.4",
+    "nodemon": "^3.0.3",
+    "shortid": "^2.2.16"
   }
 }
